--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,37 @@ ul.Top-nav li a {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: slategray;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown {
+    background-color: green;
+    overflow: hidden;
+    cursor: pointer;
+}
+.Add-new-post{
+    background-color: red;
+    cursor: pointer;
+}
 
 ul.Top-nav li a:hover:not(.active) {background-color: black;}
 
@@ -59,41 +90,24 @@ ul.Top-nav li.right {float: right;}
     margin-top: 1%;
 }
 
-.Body-left{
-    width: 20%;
+
+.column {
     float: left;
+    width: 33.33%;
 }
 
-.Post-button{
-    width: 95%;
-    margin-left: 2.5%;
-    display: block;
-    height: 45px;
-    background-color: red;
-    border: none;
-}
-.Post-button a{
-    color: white;
-    text-decoration: none;
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.Sort-post{
-    width: 95%;
-    margin-left: 2.5%;
-    margin-top: 1%;
-    height: 45px;
-    background: white;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    margin-bottom: 3%;
-}
-.Sort-post select {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-}
-.Body-right{
-    width: 80%;
-    float: right;
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
 
 .card {
@@ -170,4 +184,35 @@ ul.Top-nav li.right {float: right;}
         float: none;
         width: auto;
     }
+    .Modal{
+        width: 100%;
+        top:0;
+        left: 0 !important;
+        bottom: 0 !important;
+        right:0;
+    }
 }
+
+/* modal */
+.Modal {
+    position: absolute;
+    top: 23%;
+    left: 20%;
+    right: 20%;
+    bottom: 21%;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    overflow: auto;
+    outline: none;
+    border-radius: 3px;
+    box-shadow: 0 3px 8px 0 rgba(0,0,0,.24), 0 3px 12px 0 rgba(0,0,0,.12);
+}
+.Modal .right{
+    float: right;
+}
+.btncss{
+    border: none;
+    box-shadow: none;
+    background-color: #F2F2F2;
+}
+
